refactor(core): remove abstract constraint from five Potential methods
  Make tableProject(), isUncertain(), scalePotential(), reorder(List) and
  reorder(Variable, State[]) non-abstract in Potential, providing concrete
  default implementations:

  - isUncertain()          → return false
  - tableProject(3-arg)    → throw
  NonProjectablePotentialException.PotentialCannotBeConvertedToATable
  - scalePotential(double) → throw UnsupportedOperationException
  - reorder(List)          → throw UnsupportedOperationException
  - reorder(Variable, State[]) → throw UnsupportedOperationException

  The only remaining abstract methods in Potential are copy() and
  project(EvidenceCase). All existing concrete subclasses already override
  the five methods, so no runtime behaviour changes.

  This is Step 4 of the capability-interface redesign (rediseno-potenciales):
  subclasses are now free to implement only the capabilities they actually
  support, without being forced to provide stub implementations of unrelated
  operations. GTablePotential reparenting (AbstractIndexedPotential) is
  deferred: it requires widening the TablePotential type dependency across
  the CE-analysis chain (DANInference, TablePotentialMerge, CEADecisionTreeNode).